# madinah

./: .eslintrc.cjs  .gitignore  .npmignore  .prettierignore  AGENTS.md  CLAUDE.md  DARK_MODE.md  FINAL_SUMMARY.md  GIT_HISTORY_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  astro.config.mjs  bun.lockb  components.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tailwind.config.ts  test-setup.ts  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.codex/: auth.json  config.toml  history.jsonl  version.json
.husky/: pre-commit  pre-push
.orchids/: orchids.json
app/: 01.excalidraw  base.css  cookies.server.test.ts  cookies.server.ts  font.css  global.d.ts  root.tsx  tailwind.css  theme-dark.less  theme-light.less
apps/writer/src-tauri/: Cargo.toml  tauri.conf.json
apps/writer/src-tauri/capabilities/: default.json
apps/writer/src-tauri/src/: acp.rs  assets.rs  blog.rs  commands.rs  config.rs  drafts.rs  errors.rs  file_tree.rs  files.rs  lib.rs  main.rs  menu.rs  models.rs  plugins.rs  recent.rs  watcher.rs  workspace.rs
apps/writer/src-tauri/src/commands/: ai.rs  ai_content.rs  fs.rs  fs_support.rs  mod.rs  publish.rs  shell_install.rs
apps/writer/src-tauri/tests/: file_tree.rs  workspace_plugins.rs
docs/: git-history-cache.md
functions/: [[path]].ts
scripts/: clean-css.ts
shared/: blog-frontmatter.ts  reader-theme.css
src/: content.config.ts
utils/: book.ts  git.test.ts  git.ts  ollama.ts  post-info.ts  post.ts  rss-server.ts  rss.server.ts  rss.ts  toc.ts
(+521 files in other folders)
