[package]
name = "writer"
version = "0.1.0"
description = "Madinah local MDX writer"
authors = ["Madinah"]
edition = "2021"

[lib]
name = "writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
walkdir = "2"
notify = "8"
notify-debouncer-mini = "0.7"

[dev-dependencies]
tempfile = "3"
