[package]
name = "writer"
version = "0.1.0"
description = "Madinah local MDX writer"
authors = ["Madinah"]
edition = "2021"

[lib]
name = "writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
walkdir = "2"
notify = "8"
notify-debouncer-mini = "0.7"
agent-client-protocol = "1.0.0"
shell-words = "1"
tokio = { version = "1", features = ["time"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
